# promethues_THEACTUALFINALONE

./: .env.example  .gitignore  ATTRIBUTION.md  Dockerfile  FINAL_BUILD.ps1  FINAL_RUN.ps1  FINAL_VERIFY.ps1  INTERFACES.md  README.md  TECHNICAL REPORT.md  pyproject.toml  requirements.txt
backend/: __init__.py  app.py  config.py  llm_explain.py  simulation_runtime.py  well_catalog.py
backend/agent/: __init__.py  orchestrator.py  prompts.py  tools.py
backend/crypto/: __init__.py  gc_bridge.py  pir.py  pir_service.py
backend/data/: __init__.py  precompute.py
backend/explainer/: __init__.py  briefing.py  fallback.py  jobs.py  llm_codegen.py  pipeline.py  providers.py  render.py  sandbox.py  system_prompts.py
backend/scalekit_gateway/: README_SCALEKIT.md  __init__.py  gmail_poller.py
backend/surrogate/: __init__.py  engine.py  risk.py  well_emulator.py
cli/: prometheus_cli.py
docs/: AI_IMPACT_STATEMENT.md  DECK_OUTLINE.md  DEMO_SCRIPT.md  PITCH_DECK.md  PROJECT_MANIFEST.md  RESEARCH_PAPER.md  RUNBOOK.md  TECHNICAL_REPORT.md
docs/PITCH/: PITCH_DECK.html
frontend/: package.json
kaggle/: README_KAGGLE_COLAB.md
kaggle/kernel/: kernel-metadata.json  well_mhd64_kernel.py
ml/: fetch_well.py  train_phase_a.py  train_well_emulator.py
ml/configs/: smoke.yaml  (+1 more)
scripts/: demo_seed.py  kaggle_submit.py  kaggle_submit_dataset.py  kaggle_wait_download.py  mini_pytest.py  open_visible_demo.ps1  run_all.ps1  run_all.sh  verify.py  verify_all.ps1  verify_all.sh
tests/: test_agent.py  test_api.py  test_explainer.py  test_gc.py  test_pir.py  test_surrogate.py
(+6 files in other folders)
